voidcsfml/include/voidcsfml/graphics.h

VOIDCSFML_API view_getviewport(void* self, void* result);
VOIDCSFML_API view_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API view_move_UU2(void* self, void* offset);
VOIDCSFML_API view_rotate_Bw9(void* self, float angle);
VOIDCSFML_API view_zoom_Bw9(void* self, float factor);
VOIDCSFML_API view_gettransform(void* self, void* result);
VOIDCSFML_API view_getinversetransform(void* self, void* result);
VOIDCSFML_API view_initialize_DDi(void* self, void* copy);
VOIDCSFML_API rendertarget_clear_QVe(void* self, void* color);
VOIDCSFML_API rendertarget_setview_DDi(void* self, void* view);
VOIDCSFML_API rendertarget_getview(void* self, void** result);
VOIDCSFML_API rendertarget_getdefaultview(void* self, void** result);
VOIDCSFML_API rendertarget_getviewport_DDi(void* self, void* view, void* result);
VOIDCSFML_API rendertarget_mappixeltocoords_ufV(void* self, void* point, void* result);
VOIDCSFML_API rendertarget_mappixeltocoords_ufVDDi(void* self, void* point, void* view, void* result);
VOIDCSFML_API rendertarget_mapcoordstopixel_UU2(void* self, void* point, void* result);
VOIDCSFML_API rendertarget_mapcoordstopixel_UU2DDi(void* self, void* point, void* view, void* result);
VOIDCSFML_API rendertarget_draw_46svgvu9wmi4(void* self, void* vertices, size_t vertex_count, int type, void* states);
VOIDCSFML_API rendertarget_pushglstates(void* self);
VOIDCSFML_API rendertarget_popglstates(void* self);
VOIDCSFML_API rendertarget_resetglstates(void* self);
VOIDCSFML_API rendertexture_initialize(void* self);
VOIDCSFML_API rendertexture_finalize(void* self);
VOIDCSFML_API rendertexture_create_emSemSGZq(void* self, unsigned int width, unsigned int height, unsigned char depth_buffer, unsigned char* result);
VOIDCSFML_API rendertexture_setsmooth_GZq(void* self, unsigned char smooth);
VOIDCSFML_API rendertexture_issmooth(void* self, unsigned char* result);
VOIDCSFML_API rendertexture_setrepeated_GZq(void* self, unsigned char repeated);
VOIDCSFML_API rendertexture_isrepeated(void* self, unsigned char* result);
VOIDCSFML_API rendertexture_setactive_GZq(void* self, unsigned char active, unsigned char* result);
VOIDCSFML_API rendertexture_display(void* self);
VOIDCSFML_API rendertexture_getsize(void* self, void* result);
VOIDCSFML_API rendertexture_gettexture(void* self, void** result);
VOIDCSFML_API rendertexture_clear_QVe(void* self, void* color);
VOIDCSFML_API rendertexture_setview_DDi(void* self, void* view);
VOIDCSFML_API rendertexture_getview(void* self, void** result);
VOIDCSFML_API rendertexture_getdefaultview(void* self, void** result);
VOIDCSFML_API rendertexture_getviewport_DDi(void* self, void* view, void* result);
VOIDCSFML_API rendertexture_mappixeltocoords_ufV(void* self, void* point, void* result);
VOIDCSFML_API rendertexture_mappixeltocoords_ufVDDi(void* self, void* point, void* view, void* result);
VOIDCSFML_API rendertexture_mapcoordstopixel_UU2(void* self, void* point, void* result);
VOIDCSFML_API rendertexture_mapcoordstopixel_UU2DDi(void* self, void* point, void* view, void* result);
VOIDCSFML_API rendertexture_draw_46svgvu9wmi4(void* self, void* vertices, size_t vertex_count, int type, void* states);
VOIDCSFML_API rendertexture_pushglstates(void* self);
VOIDCSFML_API rendertexture_popglstates(void* self);
VOIDCSFML_API rendertexture_resetglstates(void* self);
VOIDCSFML_API renderwindow_initialize(void* self);
VOIDCSFML_API renderwindow_initialize_wg0bQssaLFw4(void* self, void* mode, size_t title_size, uint32_t* title, uint32_t style, void* settings);
VOIDCSFML_API renderwindow_initialize_rLQFw4(void* self, WindowHandle handle, void* settings);
VOIDCSFML_API renderwindow_finalize(void* self);
VOIDCSFML_API renderwindow_getsize(void* self, void* result);
VOIDCSFML_API renderwindow_capture(void* self, void* result);
VOIDCSFML_API renderwindow_create_wg0bQssaLFw4(void* self, void* mode, size_t title_size, uint32_t* title, uint32_t style, void* settings);
VOIDCSFML_API renderwindow_create_rLQFw4(void* self, WindowHandle handle, void* settings);
VOIDCSFML_API renderwindow_close(void* self);
VOIDCSFML_API renderwindow_isopen(void* self, unsigned char* result);
VOIDCSFML_API renderwindow_getsettings(void* self, void* result);
VOIDCSFML_API renderwindow_pollevent_YJW(void* self, void* event, unsigned char* result);
VOIDCSFML_API renderwindow_waitevent_YJW(void* self, void* event, unsigned char* result);
VOIDCSFML_API renderwindow_getposition(void* self, void* result);
VOIDCSFML_API renderwindow_setposition_ufV(void* self, void* position);
VOIDCSFML_API renderwindow_setsize_DXO(void* self, void* size);
VOIDCSFML_API renderwindow_settitle_bQs(void* self, size_t title_size, uint32_t* title);
VOIDCSFML_API renderwindow_seticon_emSemS843(void* self, unsigned int width, unsigned int height, uint8_t* pixels);
VOIDCSFML_API renderwindow_setvisible_GZq(void* self, unsigned char visible);
VOIDCSFML_API renderwindow_setverticalsyncenabled_GZq(void* self, unsigned char enabled);
VOIDCSFML_API renderwindow_setmousecursorvisible_GZq(void* self, unsigned char visible);
VOIDCSFML_API renderwindow_setkeyrepeatenabled_GZq(void* self, unsigned char enabled);
VOIDCSFML_API renderwindow_setframeratelimit_emS(void* self, unsigned int limit);
VOIDCSFML_API renderwindow_setjoystickthreshold_Bw9(void* self, float threshold);
VOIDCSFML_API renderwindow_setactive_GZq(void* self, unsigned char active, unsigned char* result);
VOIDCSFML_API renderwindow_requestfocus(void* self);
VOIDCSFML_API renderwindow_hasfocus(void* self, unsigned char* result);
VOIDCSFML_API renderwindow_display(void* self);
VOIDCSFML_API renderwindow_getsystemhandle(void* self, WindowHandle* result);
VOIDCSFML_API renderwindow_clear_QVe(void* self, void* color);
VOIDCSFML_API renderwindow_setview_DDi(void* self, void* view);
VOIDCSFML_API renderwindow_getview(void* self, void** result);
VOIDCSFML_API renderwindow_getdefaultview(void* self, void** result);
VOIDCSFML_API renderwindow_getviewport_DDi(void* self, void* view, void* result);
VOIDCSFML_API renderwindow_mappixeltocoords_ufV(void* self, void* point, void* result);
VOIDCSFML_API renderwindow_mappixeltocoords_ufVDDi(void* self, void* point, void* view, void* result);
VOIDCSFML_API renderwindow_mapcoordstopixel_UU2(void* self, void* point, void* result);
VOIDCSFML_API renderwindow_mapcoordstopixel_UU2DDi(void* self, void* point, void* view, void* result);
VOIDCSFML_API renderwindow_draw_46svgvu9wmi4(void* self, void* vertices, size_t vertex_count, int type, void* states);
VOIDCSFML_API renderwindow_pushglstates(void* self);
VOIDCSFML_API renderwindow_popglstates(void* self);
VOIDCSFML_API renderwindow_resetglstates(void* self);
VOIDCSFML_API shader_initialize(void* self);
VOIDCSFML_API shader_finalize(void* self);
VOIDCSFML_API shader_loadfromfile_zkCqL0(void* self, size_t filename_size, char* filename, int type, unsigned char* result);
VOIDCSFML_API shader_loadfromfile_zkCzkC(void* self, size_t vertex_shader_filename_size, char* vertex_shader_filename, size_t fragment_shader_filename_size, char* fragment_shader_filename, unsigned char* result);
VOIDCSFML_API shader_loadfrommemory_zkCqL0(void* self, size_t shader_size, char* shader, int type, unsigned char* result);
VOIDCSFML_API shader_loadfrommemory_zkCzkC(void* self, size_t vertex_shader_size, char* vertex_shader, size_t fragment_shader_size, char* fragment_shader, unsigned char* result);
VOIDCSFML_API shader_loadfromstream_PO0qL0(void* self, void* stream, int type, unsigned char* result);
VOIDCSFML_API shader_loadfromstream_PO0PO0(void* self, void* vertex_shader_stream, void* fragment_shader_stream, unsigned char* result);
VOIDCSFML_API shader_setparameter_zkCBw9(void* self, size_t name_size, char* name, float x);
VOIDCSFML_API shader_setparameter_zkCBw9Bw9(void* self, size_t name_size, char* name, float x, float y);
VOIDCSFML_API shader_setparameter_zkCBw9Bw9Bw9(void* self, size_t name_size, char* name, float x, float y, float z);
VOIDCSFML_API shader_setparameter_zkCBw9Bw9Bw9Bw9(void* self, size_t name_size, char* name, float x, float y, float z, float w);
VOIDCSFML_API shader_setparameter_zkCUU2(void* self, size_t name_size, char* name, void* vector);
VOIDCSFML_API shader_setparameter_zkCNzM(void* self, size_t name_size, char* name, void* vector);
VOIDCSFML_API shader_setparameter_zkCQVe(void* self, size_t name_size, char* name, void* color);
VOIDCSFML_API shader_setparameter_zkCFPe(void* self, size_t name_size, char* name, void* transform);
VOIDCSFML_API shader_setparameter_zkCDJb(void* self, size_t name_size, char* name, void* texture);
VOIDCSFML_API shader_setparameter_zkCLcV(void* self, size_t name_size, char* name);
VOIDCSFML_API shader_getnativehandle(void* self, unsigned int* result);
VOIDCSFML_API shader_bind_8P6(void* shader);
VOIDCSFML_API shader_isavailable(unsigned char* result);
VOIDCSFML_API sprite_initialize(void* self);
VOIDCSFML_API sprite_initialize_DJb(void* self, void* texture);
VOIDCSFML_API sprite_initialize_DJb2k1(void* self, void* texture, void* rectangle);
VOIDCSFML_API sprite_settexture_DJbGZq(void* self, void* texture, unsigned char reset_rect);
VOIDCSFML_API sprite_settexturerect_2k1(void* self, void* rectangle);
VOIDCSFML_API sprite_setcolor_QVe(void* self, void* color);
VOIDCSFML_API sprite_gettexture(void* self, void** result);
VOIDCSFML_API sprite_gettexturerect(void* self, void* result);
VOIDCSFML_API sprite_getcolor(void* self, void* result);
VOIDCSFML_API sprite_getlocalbounds(void* self, void* result);
VOIDCSFML_API sprite_getglobalbounds(void* self, void* result);
VOIDCSFML_API sprite_setposition_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API sprite_setposition_UU2(void* self, void* position);
VOIDCSFML_API sprite_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API sprite_setscale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API sprite_setscale_UU2(void* self, void* factors);
VOIDCSFML_API sprite_setorigin_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API sprite_setorigin_UU2(void* self, void* origin);
VOIDCSFML_API sprite_getposition(void* self, void* result);
VOIDCSFML_API sprite_getrotation(void* self, float* result);
VOIDCSFML_API sprite_getscale(void* self, void* result);
VOIDCSFML_API sprite_getorigin(void* self, void* result);
VOIDCSFML_API sprite_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API sprite_move_UU2(void* self, void* offset);
VOIDCSFML_API sprite_rotate_Bw9(void* self, float angle);
VOIDCSFML_API sprite_scale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API sprite_scale_UU2(void* self, void* factor);
VOIDCSFML_API sprite_gettransform(void* self, void* result);
VOIDCSFML_API sprite_getinversetransform(void* self, void* result);
VOIDCSFML_API sprite_draw_kb9RoT(void* self, void* target, void* states);
VOIDCSFML_API sprite_draw_fqURoT(void* self, void* target, void* states);
VOIDCSFML_API sprite_draw_Xk1RoT(void* self, void* target, void* states);
VOIDCSFML_API sprite_initialize_8xu(void* self, void* copy);
VOIDCSFML_API text_initialize(void* self);
VOIDCSFML_API text_initialize_bQs7CFemS(void* self, size_t string_size, uint32_t* string, void* font, unsigned int character_size);
VOIDCSFML_API text_setstring_bQs(void* self, size_t string_size, uint32_t* string);
VOIDCSFML_API text_setfont_7CF(void* self, void* font);
VOIDCSFML_API text_setcharactersize_emS(void* self, unsigned int size);
VOIDCSFML_API text_setstyle_saL(void* self, uint32_t style);
VOIDCSFML_API text_setcolor_QVe(void* self, void* color);
VOIDCSFML_API text_getstring(void* self, uint32_t** result);
VOIDCSFML_API text_getfont(void* self, void** result);
VOIDCSFML_API text_getcharactersize(void* self, unsigned int* result);
VOIDCSFML_API text_getstyle(void* self, uint32_t* result);
VOIDCSFML_API text_getcolor(void* self, void* result);
VOIDCSFML_API text_findcharacterpos_vgv(void* self, size_t index, void* result);
VOIDCSFML_API text_getlocalbounds(void* self, void* result);
VOIDCSFML_API text_getglobalbounds(void* self, void* result);
VOIDCSFML_API text_setposition_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API text_setposition_UU2(void* self, void* position);
VOIDCSFML_API text_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API text_setscale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API text_setscale_UU2(void* self, void* factors);
VOIDCSFML_API text_setorigin_Bw9Bw9(void* self, float x, float y);