src/graphics/lib.cr

  fun view_getviewport(self : Void*, result : Void*)
  fun view_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun view_move_UU2(self : Void*, offset : Void*)
  fun view_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun view_zoom_Bw9(self : Void*, factor : LibC::Float)
  fun view_gettransform(self : Void*, result : Void*)
  fun view_getinversetransform(self : Void*, result : Void*)
  fun view_initialize_DDi(self : Void*, copy : Void*)
  fun rendertarget_clear_QVe(self : Void*, color : Void*)
  fun rendertarget_setview_DDi(self : Void*, view : Void*)
  fun rendertarget_getview(self : Void*, result : Void**)
  fun rendertarget_getdefaultview(self : Void*, result : Void**)
  fun rendertarget_getviewport_DDi(self : Void*, view : Void*, result : Void*)
  fun rendertarget_mappixeltocoords_ufV(self : Void*, point : Void*, result : Void*)
  fun rendertarget_mappixeltocoords_ufVDDi(self : Void*, point : Void*, view : Void*, result : Void*)
  fun rendertarget_mapcoordstopixel_UU2(self : Void*, point : Void*, result : Void*)
  fun rendertarget_mapcoordstopixel_UU2DDi(self : Void*, point : Void*, view : Void*, result : Void*)
  fun rendertarget_draw_46svgvu9wmi4(self : Void*, vertices : Void*, vertex_count : LibC::SizeT, type : LibC::Int, states : Void*)
  fun rendertarget_pushglstates(self : Void*)
  fun rendertarget_popglstates(self : Void*)
  fun rendertarget_resetglstates(self : Void*)
  fun rendertexture_initialize(self : Void*)
  fun rendertexture_finalize(self : Void*)
  fun rendertexture_create_emSemSGZq(self : Void*, width : LibC::UInt, height : LibC::UInt, depth_buffer : Bool, result : Bool*)
  fun rendertexture_setsmooth_GZq(self : Void*, smooth : Bool)
  fun rendertexture_issmooth(self : Void*, result : Bool*)
  fun rendertexture_setrepeated_GZq(self : Void*, repeated : Bool)
  fun rendertexture_isrepeated(self : Void*, result : Bool*)
  fun rendertexture_setactive_GZq(self : Void*, active : Bool, result : Bool*)
  fun rendertexture_display(self : Void*)
  fun rendertexture_getsize(self : Void*, result : Void*)
  fun rendertexture_gettexture(self : Void*, result : Void**)
  fun rendertexture_clear_QVe(self : Void*, color : Void*)
  fun rendertexture_setview_DDi(self : Void*, view : Void*)
  fun rendertexture_getview(self : Void*, result : Void**)
  fun rendertexture_getdefaultview(self : Void*, result : Void**)
  fun rendertexture_getviewport_DDi(self : Void*, view : Void*, result : Void*)
  fun rendertexture_mappixeltocoords_ufV(self : Void*, point : Void*, result : Void*)
  fun rendertexture_mappixeltocoords_ufVDDi(self : Void*, point : Void*, view : Void*, result : Void*)
  fun rendertexture_mapcoordstopixel_UU2(self : Void*, point : Void*, result : Void*)
  fun rendertexture_mapcoordstopixel_UU2DDi(self : Void*, point : Void*, view : Void*, result : Void*)
  fun rendertexture_draw_46svgvu9wmi4(self : Void*, vertices : Void*, vertex_count : LibC::SizeT, type : LibC::Int, states : Void*)
  fun rendertexture_pushglstates(self : Void*)
  fun rendertexture_popglstates(self : Void*)
  fun rendertexture_resetglstates(self : Void*)
  fun renderwindow_initialize(self : Void*)
  fun renderwindow_initialize_wg0bQssaLFw4(self : Void*, mode : Void*, title_size : LibC::SizeT, title : Char*, style : UInt32, settings : Void*)
  fun renderwindow_initialize_rLQFw4(self : Void*, handle : WindowHandle, settings : Void*)
  fun renderwindow_finalize(self : Void*)
  fun renderwindow_getsize(self : Void*, result : Void*)
  fun renderwindow_capture(self : Void*, result : Void*)
  fun renderwindow_create_wg0bQssaLFw4(self : Void*, mode : Void*, title_size : LibC::SizeT, title : Char*, style : UInt32, settings : Void*)
  fun renderwindow_create_rLQFw4(self : Void*, handle : WindowHandle, settings : Void*)
  fun renderwindow_close(self : Void*)
  fun renderwindow_isopen(self : Void*, result : Bool*)
  fun renderwindow_getsettings(self : Void*, result : Void*)
  fun renderwindow_pollevent_YJW(self : Void*, event : Void*, result : Bool*)
  fun renderwindow_waitevent_YJW(self : Void*, event : Void*, result : Bool*)
  fun renderwindow_getposition(self : Void*, result : Void*)
  fun renderwindow_setposition_ufV(self : Void*, position : Void*)
  fun renderwindow_setsize_DXO(self : Void*, size : Void*)
  fun renderwindow_settitle_bQs(self : Void*, title_size : LibC::SizeT, title : Char*)
  fun renderwindow_seticon_emSemS843(self : Void*, width : LibC::UInt, height : LibC::UInt, pixels : UInt8*)
  fun renderwindow_setvisible_GZq(self : Void*, visible : Bool)
  fun renderwindow_setverticalsyncenabled_GZq(self : Void*, enabled : Bool)
  fun renderwindow_setmousecursorvisible_GZq(self : Void*, visible : Bool)
  fun renderwindow_setkeyrepeatenabled_GZq(self : Void*, enabled : Bool)
  fun renderwindow_setframeratelimit_emS(self : Void*, limit : LibC::UInt)
  fun renderwindow_setjoystickthreshold_Bw9(self : Void*, threshold : LibC::Float)
  fun renderwindow_setactive_GZq(self : Void*, active : Bool, result : Bool*)
  fun renderwindow_requestfocus(self : Void*)
  fun renderwindow_hasfocus(self : Void*, result : Bool*)
  fun renderwindow_display(self : Void*)
  fun renderwindow_getsystemhandle(self : Void*, result : WindowHandle*)
  fun renderwindow_clear_QVe(self : Void*, color : Void*)
  fun renderwindow_setview_DDi(self : Void*, view : Void*)
  fun renderwindow_getview(self : Void*, result : Void**)
  fun renderwindow_getdefaultview(self : Void*, result : Void**)
  fun renderwindow_getviewport_DDi(self : Void*, view : Void*, result : Void*)
  fun renderwindow_mappixeltocoords_ufV(self : Void*, point : Void*, result : Void*)
  fun renderwindow_mappixeltocoords_ufVDDi(self : Void*, point : Void*, view : Void*, result : Void*)
  fun renderwindow_mapcoordstopixel_UU2(self : Void*, point : Void*, result : Void*)
  fun renderwindow_mapcoordstopixel_UU2DDi(self : Void*, point : Void*, view : Void*, result : Void*)
  fun renderwindow_draw_46svgvu9wmi4(self : Void*, vertices : Void*, vertex_count : LibC::SizeT, type : LibC::Int, states : Void*)
  fun renderwindow_pushglstates(self : Void*)
  fun renderwindow_popglstates(self : Void*)
  fun renderwindow_resetglstates(self : Void*)
  fun shader_initialize(self : Void*)
  fun shader_finalize(self : Void*)
  fun shader_loadfromfile_zkCqL0(self : Void*, filename_size : LibC::SizeT, filename : LibC::Char*, type : LibC::Int, result : Bool*)
  fun shader_loadfromfile_zkCzkC(self : Void*, vertex_shader_filename_size : LibC::SizeT, vertex_shader_filename : LibC::Char*, fragment_shader_filename_size : LibC::SizeT, fragment_shader_filename : LibC::Char*, result : Bool*)
  fun shader_loadfrommemory_zkCqL0(self : Void*, shader_size : LibC::SizeT, shader : LibC::Char*, type : LibC::Int, result : Bool*)
  fun shader_loadfrommemory_zkCzkC(self : Void*, vertex_shader_size : LibC::SizeT, vertex_shader : LibC::Char*, fragment_shader_size : LibC::SizeT, fragment_shader : LibC::Char*, result : Bool*)
  fun shader_loadfromstream_PO0qL0(self : Void*, stream : Void*, type : LibC::Int, result : Bool*)
  fun shader_loadfromstream_PO0PO0(self : Void*, vertex_shader_stream : Void*, fragment_shader_stream : Void*, result : Bool*)
  fun shader_setparameter_zkCBw9(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, x : LibC::Float)
  fun shader_setparameter_zkCBw9Bw9(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, x : LibC::Float, y : LibC::Float)
  fun shader_setparameter_zkCBw9Bw9Bw9(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, x : LibC::Float, y : LibC::Float, z : LibC::Float)
  fun shader_setparameter_zkCBw9Bw9Bw9Bw9(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, x : LibC::Float, y : LibC::Float, z : LibC::Float, w : LibC::Float)
  fun shader_setparameter_zkCUU2(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, vector : Void*)
  fun shader_setparameter_zkCNzM(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, vector : Void*)
  fun shader_setparameter_zkCQVe(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, color : Void*)
  fun shader_setparameter_zkCFPe(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, transform : Void*)
  fun shader_setparameter_zkCDJb(self : Void*, name_size : LibC::SizeT, name : LibC::Char*, texture : Void*)
  fun shader_setparameter_zkCLcV(self : Void*, name_size : LibC::SizeT, name : LibC::Char*)
  fun shader_getnativehandle(self : Void*, result : LibC::UInt*)
  fun shader_bind_8P6(shader : Void*)
  fun shader_isavailable(result : Bool*)
  fun sprite_initialize(self : Void*)
  fun sprite_initialize_DJb(self : Void*, texture : Void*)
  fun sprite_initialize_DJb2k1(self : Void*, texture : Void*, rectangle : Void*)
  fun sprite_settexture_DJbGZq(self : Void*, texture : Void*, reset_rect : Bool)
  fun sprite_settexturerect_2k1(self : Void*, rectangle : Void*)
  fun sprite_setcolor_QVe(self : Void*, color : Void*)
  fun sprite_gettexture(self : Void*, result : Void**)
  fun sprite_gettexturerect(self : Void*, result : Void*)
  fun sprite_getcolor(self : Void*, result : Void*)
  fun sprite_getlocalbounds(self : Void*, result : Void*)
  fun sprite_getglobalbounds(self : Void*, result : Void*)
  fun sprite_setposition_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun sprite_setposition_UU2(self : Void*, position : Void*)
  fun sprite_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun sprite_setscale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun sprite_setscale_UU2(self : Void*, factors : Void*)
  fun sprite_setorigin_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun sprite_setorigin_UU2(self : Void*, origin : Void*)
  fun sprite_getposition(self : Void*, result : Void*)
  fun sprite_getrotation(self : Void*, result : LibC::Float*)
  fun sprite_getscale(self : Void*, result : Void*)
  fun sprite_getorigin(self : Void*, result : Void*)
  fun sprite_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun sprite_move_UU2(self : Void*, offset : Void*)
  fun sprite_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun sprite_scale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun sprite_scale_UU2(self : Void*, factor : Void*)
  fun sprite_gettransform(self : Void*, result : Void*)
  fun sprite_getinversetransform(self : Void*, result : Void*)
  fun sprite_draw_kb9RoT(self : Void*, target : Void*, states : Void*)
  fun sprite_draw_fqURoT(self : Void*, target : Void*, states : Void*)
  fun sprite_draw_Xk1RoT(self : Void*, target : Void*, states : Void*)
  fun sprite_initialize_8xu(self : Void*, copy : Void*)
  fun text_initialize(self : Void*)
  fun text_initialize_bQs7CFemS(self : Void*, string_size : LibC::SizeT, string : Char*, font : Void*, character_size : LibC::UInt)
  fun text_setstring_bQs(self : Void*, string_size : LibC::SizeT, string : Char*)
  fun text_setfont_7CF(self : Void*, font : Void*)
  fun text_setcharactersize_emS(self : Void*, size : LibC::UInt)
  fun text_setstyle_saL(self : Void*, style : UInt32)
  fun text_setcolor_QVe(self : Void*, color : Void*)
  fun text_getstring(self : Void*, result : Char**)
  fun text_getfont(self : Void*, result : Void**)
  fun text_getcharactersize(self : Void*, result : LibC::UInt*)
  fun text_getstyle(self : Void*, result : UInt32*)
  fun text_getcolor(self : Void*, result : Void*)
  fun text_findcharacterpos_vgv(self : Void*, index : LibC::SizeT, result : Void*)
  fun text_getlocalbounds(self : Void*, result : Void*)
  fun text_getglobalbounds(self : Void*, result : Void*)
  fun text_setposition_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun text_setposition_UU2(self : Void*, position : Void*)
  fun text_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun text_setscale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun text_setscale_UU2(self : Void*, factors : Void*)
  fun text_setorigin_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
